Adding robot/player svgs

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <div class="menu">
             MENU
 
+            <span class="robot-svg"></span>
+            <div class="robot-svg"></div>
         </div>
 
     </main>
