Created menu buttons

--- a/index.html
+++ b/index.html
@@ -12,10 +12,27 @@
 
     <main>
         <div class="menu">
-            MENU
+            
+            <div class="left-side">
+                <button class="player-btn" id="1">Player</button>
+                <button class="robot-btn" id="2">Bot</button>
 
-            <span class="robot-svg"></span>
-            <div class="robot-svg"></div>
+            </div>
+
+            <button class="start-btn">Let's get it on!</button>
+
+            <div class="right-side">
+                <button class="player-btn" id="3">Player</button>
+                <button class="robot-btn" id="4">Bot</button>
+
+            </div>
+
+
+            <img src="images/et.svg" class="icon left" alt="">
+            <img src="images/robot.svg" class="icon left" alt="">
+            <img src="images/et.svg" class="icon right" alt="">
+            <img src="images/robot.svg" class="icon right" alt="">
+            
         </div>
 
     </main>
