Adding initial tiktaktoe text animation

--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
-    <link rel="stylesheet" href="style.css">
     <script type='module' src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button class="toggle-1" onClick=toggle()>TOGGLE</button>
+    <button class='test-btn'>TEST</button>
     <main>
-        <div class="menu">
+
+        <div class="ttt-text">
+
+            <span class="tik">tik</span>
+            <span class="tak">tak</span>
+            <span class="toe">toe</span>
+
+        </div>
+
+        <div class="menu inactive">
             <div class="text">Choose your destiny...</div>
             <div class="left-side">
                 <button class="player-btn" id="1">Player</button>
@@ -44,4 +53,6 @@
     </footer>
     
 </body>
+
+
 </html>
