Updating animations for tiktaktoe text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <button class='test-btn'>TEST</button>
     <main>
 
-        <div class="ttt-text inactive">
+        <div class="ttt-text">
 
             <span class="tik">tik</span>
             <span class="tak">tak</span>
