--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button class='test-btn'>TEST</button>
     <main>
-
-        <div class="ttt-text">
+        <button class='test-btn' style="position:absolute;bottom:20%;right:5%;width:fit-content;height:auto" onclick="test">test</button>
+        <div class="ttt-text inactive">
 
             <span class="tik">tik</span>
             <span class="tak">tak</span>
@@ -23,16 +22,16 @@
         <div class="menu inactive">
             <div class="text">Choose your destiny...</div>
             <div class="left-side">
-                <button class="player-btn" id="1">Player</button>
-                <button class="robot-btn" id="2">Bot</button>
+                <button class="player-btn" id="selectPlayer-btn" value="1">Player</button>
+                <button class="robot-btn" id="selectPlayer-btn" value="2">Bot</button>
 
             </div>
 
-            <button class="start-btn">Let's get it on!</button>
+            <button class="start-btn" disabled >Let's get it on</button>
 
             <div class="right-side">
-                <button class="player-btn" id="3">Player</button>
-                <button class="robot-btn" id="4">Bot   </button>
+                <button class="player-btn" id="selectPlayer-btn" value="3">Player</button>
+                <button class="robot-btn" id="selectPlayer-btn" value="4">Bot   </button>
 
             </div>
 
