Creating starting battle ICON vs ICON animations

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
             </div>
 
 
+
+           </div>
+        
+        <div class="icon-wrapper inactive">
+
+            <div class="text">VS</div>
+
             <img src="images/et.svg" class="icon left" alt="">
             <img src="images/robot.svg" class="icon left" alt="">
             <img src="images/et.svg" class="icon right" alt="">
