--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         </div>
 
-        <div class="main">
+        <div class="main inactive">
             
             <div class="display">
 
@@ -62,7 +62,7 @@
                 
             </div>
 
-        <div class="board inactive">
+        <div class="board">
 
             <div class="cell"></div>
             <div class="cell"></div>
