--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 
             <div class="text">VS</div>
 
-            <img src="images/et.svg" class="icon left player" alt="">
-            <img src="images/robot.svg" class="icon left bot" alt="">
-            <img src="images/et.svg" class="icon right player" alt="">
-            <img src="images/robot.svg" class="icon right bot" alt="">
+            <img src="images/et_red.svg" class="icon left player" alt="">
+            <img src="images/robot_red.svg" class="icon left bot" alt="">
+            <img src="images/et_green.svg" class="icon right player" alt="">
+            <img src="images/robot_green.svg" class="icon right bot" alt="">
 
         </div>
 
-        <div class="main inactive">
+        <div class="game inactive">
             
             <div class="display">
 
@@ -62,17 +62,7 @@
                 
             </div>
 
-        <div class="board">
-
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
+        <div class="board inactive">
 
         </div>
     </div>
