Working on bot script

--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
 
         <div class="board inactive">
 
+            
         </div>
+        <button class="menu-btn">MENU</button>
+        <button class="restart-btn">Restart</button>
+
     </div>
 
     </main>
