--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
+    <script src="https://use.fontawesome.com/df458140cc.js" defer></script>
     <script type='module' src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
-        <button class='test-btn' style="position:absolute;bottom:20%;right:5%;width:fit-content;height:auto">test</button>
+        <button class='test-btn' style="position:absolute;bottom:20%;right:20%;width:fit-content;height:auto">test</button>
         <div class="ttt-text inactive">
 
             <span class="tik">tik</span>
@@ -74,8 +75,8 @@
 
             
         </div>
-        <button class="menu-btn">MENU</button>
-        <button class="restart-btn">Restart</button>
+        <button class="menu-btn">Menu</button>
+        <button class="restart-btn"><i  class="fa fa-refresh"></i></button>
 
     </div>
 
